[package]
name = "cssesc"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
description = "Escape a string for use as a CSS string or identifier. A faithful port of the cssesc npm package. Zero deps, no_std."
documentation = "https://docs.rs/cssesc"
repository = "https://github.com/trananhtung/cssesc"
homepage = "https://github.com/trananhtung/cssesc"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["escape", "css", "identifier", "string", "selector"]
categories = ["text-processing", "encoding", "no-std"]
authors = ["trananhtung"]
exclude = ["/.github", "/.gitignore"]

[dependencies]

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
